# TimeSeriesEngine

./: CMakeLists.txt  LICENSE  README.md
src/core/: BitBuffer.cpp  BitBuffer.h  BitBufferVector.cpp  BitBufferVector.h  CMakeLists.txt  TimeSeries.cpp  TimeSeries.h  codec.cpp  codec.h  core.h  types.h
src/utils/: bit.h
tests/: BitBufferTest.cpp  BitBufferVectorTest.cpp  CMakeLists.txt  CodecTest.cpp  TimeSeriesTest.cpp  util.h
